<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Ultimate Metronome</string>
	<string name="action_settings">Settings</string>
	<string name="test_met">Test Metronome</string>
	<string name="create_song">Create a new song</string>
	<string name="title_activity_opening_menu">Ultimate Metronome</string>
	<string name="load_song">Load a Song</string>
	<string name="title_activity_edit_event">EditEventActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="add_event_button_text">Add</string>
	<string name="event_name_hint">Please name this set</string>
	<string name="event_edit_save">Save</string>
	<string name="add_event_condensed">Add</string>
	<string name="sort_action_title">Toggle Sorting</string>
	<string name="sort_condensed">Sort</string>
	<string name="save_action_title">Save Song</string>
	<string name="save_action_condensed">Save</string>
	<string name="title_activity_play_metronome_activity">Song</string>
	<string name="play_text">Play</string>
	<string name="pause_text">Pause</string>
	<string name="stop_text">Stop</string>
	<string name="title_activity_song_list_fragment">Song</string>
	<string name="title_activity_edit_song">Edit</string>
	<string name="tempo_text">Tempo</string>
	<string name="volume_edit_label">Volume</string>
	<string name="pattern_text">Edit Pattern</string>
	<string name="um_quarter">Quarter</string>
	<string name="um_eighth">Eighth</string>
	<string name="um_sixteenth">Sixteenth</string>
	<string name="um_thirtysecond">Thirty seond</string>
	<string name="um_half">Half</string>

</resources>
