<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint" >
    </EditText>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tempo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingLeft="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding"
                    android:text="@string/tempo_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/tempo_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingLeft="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingLeft="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding"
                    android:text="@string/volume_edit_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:id="@+id/volume_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingLeft="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding"
                    android:text="Pulse"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <FrameLayout
                    android:id="@+id/beat_picker_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/test_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/widget_padding"
                    android:paddingLeft="@dimen/widget_padding"
                    android:paddingRight="@dimen/widget_padding"
                    android:paddingTop="@dimen/widget_padding"
                    android:text="@string/pattern_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>